tests: adição de teste para os métodos de: - getAllAdministrators - getAllAdministratorsByStatus - getCurrentAdministrator - createAdministrator - createPlatformAdministrator - updateCurrentAdministrator - updateAdministrator